src/styles/pages/error.scss
@use "../mixins" as *;

.error-page {
	@include flex($direction: column, $align: center, $justify: center);
	background-color: var(--fds-layer-background-default);
	color: #222;
	font-size: 1.2rem;
	color-scheme: light;

	min-block-size: calc(100% - 58px);

	*:not(code),
	*::before,
	*::after {
		font-family: "Microsoft Sans Serif", Tahoma, Arial, sans-serif;
		-webkit-font-smooth: never; // this works for every browser apart from Firefox, which has no equivalent
	}

	::selection {
		background-color: navy;
	}

	button {
		box-sizing: border-box;
		min-inline-size: 75px;
		min-block-size: 23px;
		padding: 0 12px;
		border: none;
		border-radius: 0;
		background: silver;
		box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #fff,
			inset -2px -2px grey, inset 2px 2px #dfdfdf;
		font-size: 1.2rem;

		&:not(:disabled):active {
			padding: 2px 11px 0 13px;
			box-shadow: inset -1px -1px #fff, inset 1px 1px #0a0a0a,
				inset -2px -2px #dfdfdf, inset 2px 2px grey;
		}

		&:focus {
			outline: 1px dotted #000;
			outline-offset: -4px;
		}
	}

	::-webkit-scrollbar {
		inline-size: 16px;

		&-button {

			&:horizontal:end:increment,
			&:horizontal:start:decrement,
			&:vertical:end:increment,
			&:vertical:start:decrement {
				display: block;
			}

			&:horizontal {
				block-size: 17px;

				&:start {
					inline-size: 16px;
					background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='16' height='17' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M15 0H0v16h1V1h14V0z' fill='%23DFDFDF'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M2 1H1v14h1V2h12V1H2z' fill='%23fff'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M16 17H0v-1h15V0h1v17z' fill='%23000'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M15 1h-1v14H1v1h14V1z' fill='gray'/%3E%3Cpath fill='silver' d='M2 2h12v13H2z'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M9 4H8v1H7v1H6v1H5v1h1v1h1v1h1v1h1V4z' fill='%23000'/%3E%3C/svg%3E");
				}

				&:end {
					inline-size: 16px;
					background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='16' height='17' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M15 0H0v16h1V1h14V0z' fill='%23DFDFDF'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M2 1H1v14h1V2h12V1H2z' fill='%23fff'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M16 17H0v-1h15V0h1v17z' fill='%23000'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M15 1h-1v14H1v1h14V1z' fill='gray'/%3E%3Cpath fill='silver' d='M2 2h12v13H2z'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M7 4H6v7h1v-1h1V9h1V8h1V7H9V6H8V5H7V4z' fill='%23000'/%3E%3C/svg%3E");
				}
			}

			&:vertical {
				&:start {
					block-size: 17px;
					background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='16' height='17' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M15 0H0v16h1V1h14V0z' fill='%23DFDFDF'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M2 1H1v14h1V2h12V1H2z' fill='%23fff'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M16 17H0v-1h15V0h1v17z' fill='%23000'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M15 1h-1v14H1v1h14V1z' fill='gray'/%3E%3Cpath fill='silver' d='M2 2h12v13H2z'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M8 6H7v1H6v1H5v1H4v1h7V9h-1V8H9V7H8V6z' fill='%23000'/%3E%3C/svg%3E");
				}

				&:end {
					block-size: 17px;
					background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='16' height='17' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M15 0H0v16h1V1h14V0z' fill='%23DFDFDF'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M2 1H1v14h1V2h12V1H2z' fill='%23fff'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M16 17H0v-1h15V0h1v17z' fill='%23000'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M15 1h-1v14H1v1h14V1z' fill='gray'/%3E%3Cpath fill='silver' d='M2 2h12v13H2z'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M11 6H4v1h1v1h1v1h1v1h1V9h1V8h1V7h1V6z' fill='%23000'/%3E%3C/svg%3E");
				}
			}
		}

		&-corner {
			background: #dfdfdf;
		}

		&-track {
			background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='2' height='2' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M1 0H0v1h1v1h1V1H1V0z' fill='silver'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M2 0H1v1H0v1h1V1h1V0z' fill='%23fff'/%3E%3C/svg%3E");
		}

		&-thumb {
			background-color: #dfdfdf;
			box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #fff,
				inset -2px -2px #808080, inset 2px 2px #dfdfdf;
		}
	}
}

.window {
	@include flex($direction: column);

	inline-size: clamp(150px, 380px, calc(100% - 48px));
	padding: 3px;
	background: silver;
	box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #dfdfdf,
		inset -2px -2px grey, inset 2px 2px #fff;
	overflow: auto;
	resize: both;

	@media screen and (width < 648px) {
		position: absolute;
		inset-block-start: 0;
		inset-inline-start: 0;
		inline-size: calc(100% - 48px);
		block-size: calc(100% - 48px);
		margin: 24px;
	}

	&-body {
		flex: 1 1 auto;
	}

	&-body {
		@include flex($direction: column);
		margin: 8px;
	}

	footer {
		@include flex($justify: end, $gap: 6px);
		margin-block-start: 8px;
	}
}

.titlebar {
	@include flex($justify: space-between, $align: center);
	padding: 3px 2px 3px 3px;
	background: linear-gradient(90deg, navy, #1084d0);
	user-select: none;

	&-text {
		margin-inline-end: 24px;
		color: #fff;
		font-weight: 700;
		letter-spacing: 0;
	}

	&-controls {
		display: flex;

		button {
			display: block;
			min-inline-size: 16px;
			min-block-size: 14px;
			padding: 0 !important;
		}
	}

	button {
		&[aria-label="Minimize"] {
			background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='6' height='2' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill='%23000' d='M0 0h6v2H0z'/%3E%3C/svg%3E");
			background-repeat: no-repeat;
			background-position: bottom 3px left 4px;
		}

		&[aria-label="Maximize"] {
			background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='9' height='9' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M9 0H0v9h9V0zM8 2H1v6h7V2z' fill='%23000'/%3E%3C/svg%3E");
			background-repeat: no-repeat;
			background-position: top 2px left 3px;
		}

		&[aria-label="Close"] {
			margin-inline-start: 2px;
			background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='8' height='7' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M0 0h2v1h1v1h2V1h1V0h2v1H7v1H6v1H5v1h1v1h1v1h1v1H6V6H5V5H3v1H2v1H0V6h1V5h1V4h1V3H2V2H1V1H0V0z' fill='%23000'/%3E%3C/svg%3E");
			background-repeat: no-repeat;
			background-position: top 3px left 4px;
		}
	}
}

.error-inner {
	display: flex;
	margin-block: 4px 8px;

	img {
		inline-size: 32px;
		block-size: 32px;
		margin-inline-end: 1em;
		user-select: none;
		-webkit-user-drag: none;
	}

	p {
		margin: 0;
		line-height: 1.5;
	}
}

